data/forge_javadoc/1.7.10/raw/net/minecraft/client/renderer/entity/RenderSkeleton.md
---
title: "RenderSkeleton"
description: "public class RenderSkeleton extends RenderBiped"
package: "net/minecraft/client/renderer/entity"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/renderer/entity/RenderSkeleton.html"
sourceType: javadoc
---

# RenderSkeleton

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.entity.Render → net.minecraft.client.renderer.entity.RendererLivingEntity → net.minecraft.client.renderer.entity.RenderLiving → net.minecraft.client.renderer.entity.RenderBiped → net.minecraft.client.renderer.entity.RenderSkeleton

## Class signature

```java
public class RenderSkeleton extends RenderBiped
```

## Methods

- `protected void func_82422_c()`
- `protected ResourceLocation getEntityTexture(Entity p_110775_1_)`
- `protected ResourceLocation getEntityTexture(EntityLiving p_110775_1_)`
- `protected ResourceLocation getEntityTexture(EntitySkeleton p_110775_1_)`
- `protected void preRenderCallback(EntityLivingBase p_77041_1_, float p_77041_2_)`
- `protected void preRenderCallback(EntitySkeleton p_77041_1_, float p_77041_2_)`

## Fields

- `RenderSkeleton`
