data/forge_javadoc/1.8.9/raw/net/minecraft/client/renderer/entity/RenderSkeleton.md
---
title: "RenderSkeleton"
description: "public class RenderSkeleton extends RenderBiped<EntitySkeleton>"
package: "net/minecraft/client/renderer/entity"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/renderer/entity/RenderSkeleton.html"
sourceType: javadoc
---

# RenderSkeleton

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.entity.Render<T> → net.minecraft.client.renderer.entity.RendererLivingEntity<T> → net.minecraft.client.renderer.entity.RenderLiving<T> → net.minecraft.client.renderer.entity.RenderBiped<EntitySkeleton> → net.minecraft.client.renderer.entity.RenderSkeleton

## Class signature

```java
public class RenderSkeleton extends RenderBiped<EntitySkeleton>
```

## Methods

- `protected ResourceLocation getEntityTexture(EntitySkeleton entity)` — Returns the location of an entity's texture.
- `protected void preRenderCallback(EntitySkeleton entitylivingbaseIn, float partialTickTime)` — Allows the render to do any OpenGL state modifications necessary before the model is rendered.
- `void transformHeldFull3DItemLayer()`

## Fields

- `RenderSkeleton`
